# ChangeLog for sys-apps/install-xattr
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/install-xattr/ChangeLog,v 1.11 2014/06/01 01:29:16 blueness Exp $

*install-xattr-9999 (31 May 2014)

  31 May 2014; Anthony G. Basile <blueness@gentoo.org>
  +install-xattr-9999.ebuild, -install-xattr-0.2.ebuild:
  Remove 0.2 and add -9999 for testing

*install-xattr-0.2 (01 Jun 2014)

  01 Jun 2014; Anthony G. Basile <blueness@gentoo.org>
  +install-xattr-0.2.ebuild:
  Fix: http://git.overlays.gentoo.org/gitweb/?p=proj/elfix.git;a=commit;h=53a5c9
  cababc4a681c026b7ce445e29da4666d6c

  31 May 2014; Mikle Kolyada <zlogene@gentoo.org> install-xattr-0.1.ebuild:
  Add ~s390 keyword wrt bug #501534

  22 Feb 2014; Jeroen Roovers <jer@gentoo.org> install-xattr-0.1.ebuild:
  Marked ~hppa (bug #501534).

  22 Feb 2014; Anthony G. Basile <blueness@gentoo.org> install-xattr-0.1.ebuild:
  Fix bug #502076

  22 Feb 2014; Agostino Sarubbo <ago@gentoo.org> install-xattr-0.1.ebuild:
  Add ~sparc, wrt bug #501534

  22 Feb 2014; Agostino Sarubbo <ago@gentoo.org> install-xattr-0.1.ebuild:
  Add ~ia64, wrt bug #501534

  22 Feb 2014; Agostino Sarubbo <ago@gentoo.org> install-xattr-0.1.ebuild:
  Add ~alpha, wrt bug #501534

  17 Feb 2014; Anthony G. Basile <blueness@gentoo.org> install-xattr-0.1.ebuild:
  Keyword ~arm ~mips ~ppc ~ppc64

  16 Feb 2014; Anthony G. Basile <blueness@gentoo.org> install-xattr-0.1.ebuild:
  Fix type in DESCRIPTION, thanks Arfrever

  13 Feb 2014; Anthony G. Basile <blueness@gentoo.org> ChangeLog:
  Initial commit, bug #465000