@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=lzo? ( dev-libs/lzo ) xattr? ( sys-apps/attr ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=Similar to dd but can copy from source with errors
+EAPI=5
+HOMEPAGE=http://www.garloff.de/kurt/linux/ddrescue/
+IUSE=avx2 lzo sse4_2 static xattr
+KEYWORDS=~amd64 ~arm ~mips ~ppc ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos
+LICENSE=GPL-2
+RDEPEND=lzo? ( dev-libs/lzo ) xattr? ( sys-apps/attr )
+SLOT=0
+SRC_URI=http://www.garloff.de/kurt/linux/ddrescue/dd_rescue-1.45.tar.gz
+_eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=35bca87d2517e05d25df9dfa76486432
