@@ -5,26 +5,28 @@ DIST dd_rescue-1.28.tar.gz 22093 SHA256 4adcc368a1d4ad62577eaf8609809be1678335d5
 DIST dd_rescue-1.33.tar.gz 36923 SHA256 630b4524c0df2109851b9cf2112ce1c5f53c53d3ca11145bb98892ae4a9f8102 SHA512 6e9bab7baa8a723cb459d28575724972df963e7632d588ac06ab2a2a1ea775beb8c88dd3c3db7faf5d3653c8df58f2f29ea01c936a1862017ece1b686ef26936 WHIRLPOOL e81ee54612baedffa58fdc583bf3d8fcbacdfb9188e4540641336d614562dde76323d51854d71a07fee1ac0a350f71a3f09a41188bd5618aeffee5b4abed50c7
 DIST dd_rescue-1.40.tar.gz 47107 SHA256 54545ebbe2be00597d8c9ba3d51abcfdd7ba89f17d51974629e612c2619730ff SHA512 a518f632c24161310bb03265c60d20bc08472b15888c167f8a28ceaaeb67fe5c942f6a320b7a4cce4c9e0fff9e73b549d64ba13bd26f015286698ad5f8c5fed4 WHIRLPOOL 55c091e63d7226d328616835c8aa0a0551a89eb7a708d4a30130fb78fc7ec2e14b93c2d91280de6565bc58e5ec9722f6f7843656fae5d4efebdbb71cce900b26
 DIST dd_rescue-1.44.tar.gz 114799 SHA256 744fa857fff7beed6d00644ea5786ce0d2e83df315b04f7578008e0a9b2853a3 SHA512 16e9072aeda04fe898d36e13d1dfc871642c7d1d1ac79b787f3ffd24ced2e13c605b4b36f66334ee4e258d01eee286ef74862e498a5a9ea5f9bd65a66a6ec213 WHIRLPOOL 5f4bfbb4b952552d0418054015fe5940d1a83050a282fad3a42b708caa26501d41ded98024acf9919acb63604e066008ee695ff616a7c9be5abf38613815e5d6
+DIST dd_rescue-1.45.tar.gz 121426 SHA256 2626fa2842916f6861b4e1ce72284c81e1b6e7323a842911aad4082bdaa4f663 SHA512 88022f38ad0e1ea171f1db014ba5e3f421fe9c35782f01220e27beb03618998860694df6b5d2e96ea4927640952c57153f2a1633dee9c13a2227e17ddd46b160 WHIRLPOOL cbe7d227e70c1314ab15c90f4b5ba3f451f421769ebbb13589f8e66f8d09ca0986d50c0cfecdcce53fbd5a70c3aa027a5b20ea4f8c56ee05b5fc9c7be895fa18
 EBUILD dd-rescue-1.28.ebuild 1414 SHA256 926d863d600bc3ef31811117be485a02d13aa7dba1f45776fe32e0e89403ccac SHA512 2fd4e8119e344480b22f978bdb95a5ff9495bafde167c9bd3c25028153dec7f29a80a5fdfeadfb27b56d46d4e20e0b355a3dafb73f0679cb993e6421c3bc2cb2 WHIRLPOOL 4aee92ae7a9895f04af9c6ebab9d91d4b396b33b5358d1dea72731ca0aef3af3d7e0c3661c2a576494144b2fc4ba1991eb02716b9320698211d5815755ac99d3
 EBUILD dd-rescue-1.33.ebuild 1440 SHA256 93dcb7e9dbae15f1c7b0846d8d79ee907a3d12c73b75e3eff5e4b496a5117fbd SHA512 d3c9de64cc0338b952c7c3f1fac636c7e60db8ca4156511dde23f98162080535feccf67baf49d8df09f93ed29c672fcd0c64087abb93da58380b26649d56b6a2 WHIRLPOOL 5d5a027874a314575b09e70d6f2207f3facb2d1efa84c63ab2a99200b208b8674b5fbe79920cfe7fc864ce07bfd1c1eeeaf49adf1e7856f795f4a5fe15cf83ab
 EBUILD dd-rescue-1.40.ebuild 1106 SHA256 f206a608b234b5b246324f8d038e4939c0d6d3f025b5aad0da9467b2b826b467 SHA512 c84fa9dcff535b1e9c84463f090750df17a47c70a687f32d2e9904a6ee42b945e1e241ae424ca7c8360f1e9abd1b715d6cb4839fd09807266807d2cacf0df543 WHIRLPOOL f66b8400969d97d31f66bb361ef8d39c8dfce8d4ab79b0741a62282218a2518d6b34cf6b38b9d6f25369de71c3ea1c1d7c669352d38aa46e4459847d49fd023b
 EBUILD dd-rescue-1.44.ebuild 1112 SHA256 756423df915c203892ab6a7574838e1612fc111417e26e508083b8cf5409d0f8 SHA512 06a89341a84ea289fd78eff640a330f2b14b762b7e3ff2540bf17391d1dd452d1c2f3b892d88a180beec2dfa8ded944be10a76bc0e064ee6998f897bc19bb5b0 WHIRLPOOL 652c0485196a719cd54fd81c965b5a79f00705190bdfdfd1b0905566440e675147f1568456f3e21065d2ec3ac8b706b9153fb5ad02b3ab2bab943311f18a9b0d
-MISC ChangeLog 5071 SHA256 d3368fc311d52f246fa1a7644255ac245f2d749454473da40e46e26215d14178 SHA512 6a490c65fdfc937be0a362f88a3bd73d39791e8dbf4b905b1369bb7a11318065787acc06868465def21e38fad1afe0e1b57fd3e47a9b207f6189a9e58bdc9b6b WHIRLPOOL 4667b2876124c201cde76b1f5e4c4cf3d2c22059a3d33ba877c905c4c37f08ed479b71d8502b7bb4ccffb5736cd0daf4351c9ec875808d5d8c487737a288574c
-MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
+EBUILD dd-rescue-1.45.ebuild 1896 SHA256 e96f81c26f7cb39d39eabb675f662f3afa8071fbb3c4dbd620a845c727fb47e4 SHA512 196f6383bccea838575c22f742c0930182457a015add142e1e184b48a0fc4a6cdba05dcbf9c5dc5982041c43345b7e74416f691f3cfc36d4ec67bf3ac7e7fe2b WHIRLPOOL bdbd8916bb74edf2d6d2ba4d84f51be6cf193443721febab48c96ff3eb4ce51a6962fa7470b70d789acdc90a879065bcf1c3298a2883d07b6ad43ad1984f408c
+MISC ChangeLog 5261 SHA256 81e868cd8d2a230bc0d843597b87dccaf3ca48b83eaa5d5e2d2958c8caa9607a SHA512 51212fcaa2cdc9de6dd365199748e097f3d9893861c5ddbcf69c7acce9887d1921ec1f8df947a0ad0f4be926267c6090c1254968ac4a752ce837a4b852847d0b WHIRLPOOL 0f270187b84c77a6f50bf0dd276252c254f4d3c23b2d0a1936bc7dcb15fad54f6896ecdb1b1727575912a2ef433bf91b6d2a546fcde150d5c5225f591932f56b
+MISC metadata.xml 236 SHA256 33d7e07e74ef8d2ac59fda7298e65f5ace4199da502a2c6cdc91c63bc1303ba4 SHA512 53adf93eee519236083c851e44778b5546ec35dc68b35b3e2a475ee1aa498373207daf1080378f732e74be03ef1fd36c0b36212e74508d434a6458a01ec2da4b WHIRLPOOL 42512bed17686f64006a4879241e7d424842cac01dd5e725af2b6aeb303cfd6f361d2e3d474547d9e049544169b583e00aa416478c0b5c7966ecee64e21f06d6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJThepSAAoJEPiazRVxLXTFrD4P/0m9QAiPk8Ene1WtWwvrgt/9
-FmtcwB8Qdy5abF1ahEnT7xMO7BBITSjlN3EGKQTAxGdR23/p75crgGOXSFUIIhYx
-wZNkpEJttXVabilbMseGhYNPH4AE8OuhrOcl9C/VCY0eNA48vCvdhQAnxieG8iCc
-Lr7+FBVql4EDFQG2Z35GAUDSZ6jAbZAv3ajGI0mGGUuK0Z4yUPs29hBuPaZvQpJO
-thN0uET09vhjhij6rSwBf10mKuZBjuV3mJPuqrSWZN7Lun/FBvBM+5PjfjZmgb5X
-0JVZEXSHsw/SL+YDbMWxT9ttPPKv4xH3+2P3Y/91N+zY9HO0y5NraK/qmZnKlLVV
-zRa8ve+oRuCe/MbkmAGnHF/ZLh6D+ClN0UfBE4O/C79ZIrjW17GWiyFIBjh8fv1M
-5sNa4x+EL4jC49tfrz81o7OR4iWeFx0OC+sJw5iQ9tfCXlXweRaGNxsUG/MoN6ci
-mBKM7rhGYkkwdauC3cmx9hyWvakOI551tZZ8CQ+B7IabduWRmG802n4aEMtG7HZA
-h7Wf+PN7cnR+mZP77Ur+OWIvR99jb9P98tGptZR5iVpfNC+qMrWpp+5gtbbuRT5b
-6xqJOUSJz3axAulGY13lbOxyFDwEoFGBb3HQSg86AyrlU2iNueh/MVM4FJlm8865
-uySYk/b3NvukfvQaXQLG
-=xCPn
+iQIcBAEBCAAGBQJTioeMAAoJEPGu1DbS6WIAGzIP/3uPwBI+48Neq+AIIPZxm3cV
+t3s7QyUCPnjlCukZlCDgXxT3FRDr2YaCCqMVZSF44lUzsBx70pjgFfQzQj8i30C2
+nXn1vvN8QLRTT10dwHxCsSfy1pEJPjVv8/CCaalMx1xPcVNb94iis7edI/GXK5gZ
++xmcZsfrACZOhE/01iCYkJsnvt+JcLiigSemXP5tte1q1K8tPVMt7MP+EzIj3UT5
++LUTwfQuMjRcSPz+YGUjYjqazga+4uMzztKSO80/SV/VsMI2gEw1P/2M+9Y2Qs+c
+lXLR0ZXgxkGIDKQTf7ejGpFfaKuFDkcde/lyHA3tayA1cLJlBLEjmoICcW2df2Xo
+tseWwdbnNmyUdIz2ujobXBs5FA+Y8tEG+kKlkWuTn607FtPHzY9luyNtZk7v79G4
+2vYhvQhWDlrmmj3TFfsTvto4D7O6Ev9MD+s9XGB1NYHLwW1QyRPvTQu/RNtqfdzH
+05X46SQhe7aTLAu+T5wBCmvI/xkxUi/QVc4ma2IHWqFCiEmcOYPVq6Y8njLSTu60
+iv6E5vqYznrVLsPjZ26ZCtXlnybAyvbA8knt+BuVSWIjKtjU918+6rUIbFv1u5px
+IJYTYBTukuT0bz1B+sWDu0aRp3uQu6Sf+WVCWBOw1jkkmgVjraXyifvKYIntgxWK
+SavNHumlmmYuQZ2d0b3/
+=N7JU
 -----END PGP SIGNATURE-----
