@@ -2,4 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>base-system</herd>
+<use>
+ <flag name='sse4_2'>Use the SSE4.1 instruction set</flag>
+</use>
 </pkgmetadata>
