@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/dd-rescue
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/dd-rescue/ChangeLog,v 1.35 2014/05/28 13:53:21 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/dd-rescue/ChangeLog,v 1.36 2014/06/01 01:53:09 vapier Exp $
+
+*dd-rescue-1.45 (01 Jun 2014)
+
+  01 Jun 2014; Mike Frysinger <vapier@gentoo.org> +dd-rescue-1.45.ebuild,
+  metadata.xml:
+  Version bump. Add USE flags for automagic deps #511858 by Juergen Rose.
 
 *dd-rescue-1.44 (28 May 2014)
 
