@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/install-xattr
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/install-xattr/ChangeLog,v 1.11 2014/06/01 01:29:16 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/install-xattr/ChangeLog,v 1.12 2014/06/01 01:35:09 blueness Exp $
+
+  31 May 2014; Anthony G. Basile <blueness@gentoo.org>
+  install-xattr-9999.ebuild:
+  Fix -9999 to work for released versions
 
 *install-xattr-9999 (31 May 2014)
 
